[tool.poetry]
name = "floodns"
version = "0.1.0"
description = ""
authors = ["Ofir Cohen <ofir.cohen205@cs.huji.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.8.3296"
typer = "^0.9.0"
networkx = "^3.2.1"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
gurobipy = "10.0.3"
ruff = "^0.1.7"
mypy = "^1.7.1"
mpld3 = "^0.5.9"
pulp = "^2.7.0"
ortoolslpparser = {git = "https://github.com/snkas/python-ortools-lp-parser"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
